--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,15 @@ Type: Package
 Title: Structural Social Role Mining for Dynamic Social Networks
 Version: 0.1
 Date: 2016-07-11
-Authors@R: person("Yu", "Hatakeyama", role = c("aut", "cre"), email = "hatakeyama.yuu at j.mbox.nagoya-u.ac.jp")
-Maintainer: Yu Hatakeyama <hatakeyama.yuu at j.mbox.nagoya-u.ac.jp>
-Description: Implementation of SSRM: Structural Social Role Mining for Dynamic Social Networks
-License: MIT
+Authors@R: person("Yu", "Hatakeyama", role = c("aut", "cre"), email = "hatakeyama.yuu@j.mbox.nagoya-u.ac.jp")
+Maintainer: Yu Hatakeyama <hatakeyama.yuu@j.mbox.nagoya-u.ac.jp>
+Description: Implementation of SSRM: Structural Social Role Mining for Dynamic
+    Social Networks
+License: MIT + file LICENSE
 URL: https://github.com/hatayou/SSRM.git
 LazyData: TRUE
+Imports:
+    R6,
+    igraph,
+    KernSmooth
+RoxygenNote: 5.0.1
