Made role plot faster.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ds_count)
 export(lbc)
 export(leader)
 export(mediacy_score)
+export(role_register)
 export(mediator)
 export(nbc)
 export(outermost)
